@@ -1,3 +1,7 @@
+[29.December 2008]
+- entity.rb: attribute 'location' added
+- rect3.rb: added method Rectangle#point_inside?
+
 [26.December 2008]
 - rudlmore.rb: copied from freeVikings
 - image.rb: mirroring methods added
